[gd_scene load_steps=13 format=2]

[ext_resource path="res://Boulder.tscn" type="PackedScene" id=1]
[ext_resource path="res://data/audio/music.wav" type="AudioStream" id=2]
[ext_resource path="res://data/images/grid.png" type="Texture" id=3]
[ext_resource path="res://data/audio/select.wav" type="AudioStream" id=4]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=5]
[ext_resource path="res://Play.gd" type="Script" id=6]
[ext_resource path="res://Player.tscn" type="PackedScene" id=7]
[ext_resource path="res://Fall.tscn" type="PackedScene" id=9]
[ext_resource path="res://Smoke.tscn" type="PackedScene" id=10]
[ext_resource path="res://data/fonts/karmatic-arcade.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://data/audio/nextlevel.wav" type="AudioStream" id=12]

[sub_resource type="DynamicFont" id=1]
size = 50
outline_size = 8
extra_spacing_top = 5
extra_spacing_bottom = 15
font_data = ExtResource( 11 )

[node name="Play" type="Node"]
script = ExtResource( 6 )
Boulder = ExtResource( 1 )
Smoke = ExtResource( 10 )
Fall = ExtResource( 9 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 480.0
margin_bottom = 720.0
rect_pivot_offset = Vector2( 123.06, 423.937 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridColor" type="ColorRect" parent="."]
margin_right = 480.0
margin_bottom = 480.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridLines" type="TextureRect" parent="."]
margin_right = 480.0
margin_bottom = 720.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BeatTimer" type="Timer" parent="."]

[node name="PlayerTimer" type="Timer" parent="."]
wait_time = 0.8

[node name="Player" parent="." instance=ExtResource( 7 )]
position = Vector2( 240, 240 )
scale = Vector2( 0.75, 0.75 )

[node name="HUD" parent="." instance=ExtResource( 5 )]

[node name="PlayMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -5.0

[node name="SelectSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="NextLevelTextTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="NextLevelText" type="Node2D" parent="."]
z_index = 3

[node name="NextLevelTextLabel" type="Label" parent="NextLevelText"]
margin_left = 79.2487
margin_top = 47.0902
margin_right = 396.249
margin_bottom = 135.09
grow_horizontal = 2
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Level 1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextLevelSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )

[connection signal="timeout" from="BeatTimer" to="." method="beatrings"]
[connection signal="custom_on_EndButton_pressed" from="HUD" to="." method="_on_HUD_custom_on_EndButton_pressed"]
[connection signal="custom_on_TutorialContinueButton_pressed" from="HUD" to="." method="_on_HUD_custom_on_TutorialContinueButton_pressed"]
[connection signal="timeout" from="NextLevelTextTimer" to="." method="_on_NextLevelTextTimer_timeout"]
